Include GitHub in manifest

--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
     "Version": "1.0.0",
     "Description": "Changes Shane to a grill. CP version by Shidouuu (Miidorii).",
     "UniqueID": "rekooooon.shanegirlmod",
-    "UpdateKeys": [ "Nexus: 1946" ], // when you release the mod, see https://stardewvalleywiki.com/Modding:Modder_Guide/APIs/Update_checks
+    "UpdateKeys": [ "Nexus: 1946", "Github:Shidouuu/-CP-Shane-girl-mod], // when you release the mod, see https://stardewvalleywiki.com/Modding:Modder_Guide/APIs/Update_checks
     "ContentPackFor": {
         "UniqueID": "Pathoschild.ContentPatcher"
     }
